--- a/todo.org
+++ b/todo.org
@@ -1,6 +1,6 @@
 - [ ] add uuid to title algo
 - [ ] update user sync fields
-- [ ] add total/unread counters for subs
+- [X] add total/unread counters for subs
 - [ ] skip nils when update a feed
 - [ ] refactor db functions
 - [ ] import data from google reader
@@ -8,11 +8,11 @@
 - [X] todo fill host, favicon etc when creating a feed
 - [ ] left sb, feeds list. mark the current feed
 - [ ] shot enclosure node (img, video, etc)
-
 - [ ] place a link for a message
 - [ ] add date and author for a message
 - [ ] number of unreads in sb
 - [ ] fix left db view so it scrolls
 - [ ] fix long urls in the left sb
-
 - [ ] preview large images in popup
+- [ ] consume old unread message
+- [ ] show feed header in message view
