--- a/todo.org
+++ b/todo.org
@@ -16,3 +16,5 @@
 - [ ] preview large images in popup
 - [ ] consume old unread message
 - [ ] show feed header in message view
+- [ ] for an entry's title, search for a title_detail text/plain
+- [ ] preserve youtube links somehow
