--- a/todo.org
+++ b/todo.org
@@ -19,3 +19,4 @@
 - [ ] for an entry's title, search for a title_detail text/plain
 - [ ] preserve youtube links somehow
 - [ ] ui search: consider scheme
+- [ ] add db pool
